closes issue: Heading update - H5 on Tablet & Phone
made:
Tablet H5 - 16/20 Treb Regular
Phone H5 - 14/20 Treb Bold

--- a/assets/css/sherpa-site-styles.css
+++ b/assets/css/sherpa-site-styles.css
@@ -153,7 +153,7 @@ h6.sherpa {font-size: 11px;line-height: 11px;}
 
 /* Edits made by:; AJ Lohman - just organized them a bit*/
 /* headers - All*/
-h1.tablet, h2.tablet, h5.tablet {
+h1.tablet, h2.tablet {
   font-family: 'museo-for-dell-300regular', 'Trebuchet MS', Arial, Helvetica, sans-serif;
   font-weight: normal;
   color: inherit;
@@ -161,7 +161,7 @@ h1.tablet, h2.tablet, h5.tablet {
 }
 
 /* Edits made by AJ Lohman */
-h3.tablet, h4.tablet {
+h3.tablet, h4.tablet, h5.tablet {
   font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
   font-weight: normal;
   color: inherit;
