--- a/assets/sherpa/css/sherpa-override.css
+++ b/assets/sherpa/css/sherpa-override.css
@@ -292,7 +292,7 @@ Headers for tablet
 
 @media only screen and (min-width:768px) and (max-width:979px) {
 
-  h1, h2, h5 {
+  h1, h2 {
   font-family: 'museo-for-dell-300regular', 'Trebuchet MS', Arial, Helvetica, sans-serif;
   font-weight: normal;
   color: inherit;
@@ -300,7 +300,7 @@ Headers for tablet
   }
 
   /* Edits made by AJ Lohman */
-  h3, h4 {
+  h3, h4, h5 {
     font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
     font-weight: normal;
     color: inherit;
